custom/less/section-docs.less
/* ... */
#toc li a{
  display: block;
  padding: 5px 0;
}
#toc > li >a{
  padding: 10px 0;
}
#toc li a,#toc li a.selected{

}
#toc ol{
  padding:0;
}
#toc a{
  color: #999;
  text-decoration: none;
  border-right: 1px solid transparent;
  transition: border .6s ease;

  .sidebar-affix-shadow.on & {
    border-right-color: #eee;
  }
}
#toc a:hover,
#toc a:focus{
  color: #000;
  border-right: 1px solid #999
}
#toc a.selected{
  color: @brand-primary;
  border-right: 1px solid @brand-primary;
}
.page{
  margin: 25px 50px 0 250px;
}
#toc  li.current ol a{
  background-color: #6d7280;
}

#toc  li.current ol a.selected,#toc  li.current ol a:hover{
  background-color: #9299ad;
  box-shadow: rgba(255,255,255,0.2) 0 1px 0 0 inset,rgba(255,255,255,0.2) 0 1px 0 0;
}


#toc > li >a{
  padding-left: 0;
  font-size: 16px
}



#toc > li >ol >li > a{
  font-size: 14px;
  padding-left: 10px;
  padding-right: 10px;
}
#toc > li >ol >li > ol a{
  font-size: 13px;
  padding-left: 15px;
  padding-right: 10px;
}

#toc > li >ul >li > ul > li > ol a {
  font-size: 12px;
  padding-left: 30px;
  padding-right: 10px;
}

#toc > li >ul{
  margin-left: 0;
}

.docs-meta {
  overflow: auto;
  margin-top: 17px;
  color: @gray-lighter;

  .icon {
    color: #000;
    font-size: 24px;
    vertical-align: -3px;
    margin-right: 4px;
  }

  a {
    color: @gray-light;
    text-decoration: none;

    &:after {
      display: none !important;
    }

    &:hover,
    &:focus {
      color: #000;
    }
  }

  .doc-mdate {
    color: @gray-light;
    margin-left: 4px;

    &:before {
      content:"·";
      margin-right: 4px;
    }
  }
}

.github-contributors {
  .list-unstyled;
  padding-bottom: 100px;
  margin-bottom: 20px;
  border-bottom: 1px solid @gray-lighter;

  li {
    display: inline;
    margin-right: 4px;

    &:last-child {
      margin-right: 0;
    }

    a {

      &::after {
        display: none !important;
      }

      img {
        @s: 24px;
        width: @s;
        height: @s;
        border-radius: @border-radius-base;
      }
    }
  }
}

// Main content
.doc-content {
  width: 100%;

  &.with-comment {
    padding-left: 16px;

    @media (max-width: @screen-sm-max) {
      padding-left: 0;
    }
  }

  @media (max-width: 640px) {
    margin-top: 20px;
  }

  // Used by Download page
  .popover {

    .popover-title {
      padding-top: 9px;
      margin-top: 0;
      color: @gray;
    }
  }
}

#toc ol ol ol ol ol{
  display: none;
}
#toc ol li {
  padding-left: 10px;
}

#toc > li > ol > li {
  padding-left: 0;
}

// Download section
.dl-cell {
  padding: 15px;
  margin-bottom: 20px;
  margin-left: 20px;
  border: 1px solid @gray-lighter;
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  flex: 1;
  min-width: 400px;
  max-width: 600px;

  .desc {
    flex:1;
    margin-bottom: 20px;
    p{
      margin: 0;
    }
  }
  .download-option-wrap{
    display:flex;
    flex-wrap:wrap;
  }
  .download-option{
    white-space: nowrap;
  }

  h2 {
    margin: 0 0 10px !important;
    padding: 0 !important;
    border: none !important;
  }

  hr {
    margin: 10px 0 15px;
    border-bottom-color: @gray-lighter;
  }

  .bspopover {
    color: fade(@link-color, 80%);
  }

  .dl-cell-btn {
    margin-right: 10px;

    @media (max-width: @screen-xs-max) {
      margin-right: 0;
      margin-bottom: 10px;
      float: none;
    }
  }

  .list-inline {
    margin: 0;
    padding: 3px 0;

    > li {
      padding: 0;
      padding-right: 4px;

      &.muted {
        color: @gray-lighter;
      }


      .icon-github {
        font-size: 20px;
        line-height: 1;
        vertical-align: -2px;
      }
    }
  }

  .btn-lg {
    margin-top: 10px;

    span {
      color: @gray-light;
    }
  }

  .dl-deps-tips {
    border: 1px solid;
    border-radius: 3px;
    font-size: 11px;
    padding: 0px;
    width: 15px;
    height: 15px;
    display: inline-block;
    line-height: 15px;
    text-align: center;
  }

  .popover {
    width: 210px;
    color: @gray-dark;

    .popover-content {

      ul {
        padding-left: 18px;
        margin-bottom: 0;
      }
    }
  }

  .checkbox {
    margin-top: 4px;
    margin-bottom: 4px;
    padding-left: 20px;
  }

  .changelog-rss {

    .icon {
      font-size: 17px;
      vertical-align: -1px;
    }

    &:hover,
    &:focus {
      color: @brand-warning;
    }
  }
}

h1 {

  .changelog-rss {
    border: 1px solid;
    padding: 2px 8px;
    border-radius: @border-radius-base;
    font-size: 17px;
    vertical-align: 3px;

    .icon {
      font-size: 17px;
      vertical-align: 0;
    }

    &:hover,
    &:focus {
      color: #fff;
      background: @brand-warning;
      border-color: @brand-warning;
    }
  }
}

.changelog-rss {
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}

.changelog-list {

  h1 {
    font-size: 18px;
    margin: 10px 0;

    &:first-child {
      margin-top: 0;
    }
  }

  ul {
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.bspopover {
  font-weight: bold;
  cursor: help;
  color: @gray-light;
}

.list-inline {

  > li {

    @media (max-width: @screen-xs-max) {

      .btn {
        margin-bottom: 15px;
      }
    }
  }
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide {
  display: none !important;
}

// demo.html
.doc-content {

  .demo-card {
    padding: 20px 15px;
    margin: 30px 0 0;
    border: 1px solid @gray-lighter;
    border-radius: 4px;

    @media(max-width: @screen-xs-max) {
      margin: 15px 0 0;
    }

    h1 {
      font-size: 24px;
      .font-logo;
      padding-top: 0;
      margin-top: 0;
    }

    .label {
      display: inline-block;
      font-size: 14px;
      margin-top: 3px;
    }

    .demo-desc {
      min-height: 100px;
    }
  }
}

// Modals
.doc-content .modal {

  h4 {
    margin: 0;
    padding: 0;
    color: #000;
  }
}
blockquote{
  font-size: 1em;
  color:#777;
}
/* ... */

